# yaml-reisekosten-tool

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
backlog/tasks/: task-1 - Zielbild-Architektur.md  task-1.1 - YAML-Eingabeformat-festlegen.md  task-1.2 - Dokumentenerzeugung-entscheiden-Typst-vs.-LaTeX.md  task-1.3 - Modul-und-Datenfluss-Architektur-festlegen.md  task-1.4 - CLI-und-Ausgabe-Kontrakt-festlegen.md  task-10 - Follow-up-Datumsbasierte-PDF-Dateinamen-und-Markdown-Zusammenfassung.md  task-11 - Follow-up-PDF-Dateinamen-auf-Fahrtdatum-und-Titel-kuerzen.md  task-12 - Reisenebenkosten-darstellung.md  task-13 - Unterschriften-im-PDF-sinnvoll-positionieren-und-skalieren.md  task-14 - Version-0.3.0-vorbereiten-und-Signaturfix-dokumentieren.md  task-2 - Projekt-und-Tooling-Grundlage-fuer-Python-Paket-aufsetzen.md  task-3 - YAML-laden-und-Domain-Modelle-abbilden.md  task-4 - Validierung-und-Normalisierung-der-Eingabedaten-implementieren.md  task-5 - Pauschalen-und-Summenberechnung-implementieren.md  task-6 - Typst-Rendering-aus-berechneter-Abrechnung-implementieren.md  task-7 - CLI-Orchestrierung-und-Ausgabe-Kontrakt-implementieren.md  task-8 - End-to-End-Beispiel-Dokumentation-und-MVP-Qualitaetscheck-abschliessen.md  task-9 - Triage-Mehrere-Tagesfahrten-im-Monatszeitraum-wirken-wie-eine-durchgehende-Dienstreise.md
examples/: auslagen-und-overrides.yml  example.yml  minimal.yml  verpflegung-grenzfaelle.yml
tests/: test_cli_smoke.py  test_models.py  test_normalization.py  test_rendering.py  test_yaml_io.py
(+11 files in other folders)
