[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "yaml-reisekosten-tool"
version = "0.1.0"
description = "Erzeugt Reisekostenabrechnungen als PDF aus YAML-Dateien."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "yaml-reisekosten-tool contributors" },
]
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
yaml-reisekosten-tool = "yaml_reisekosten_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yaml_reisekosten_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
